fix: menu meta, user repo
